--- a/pyeonhalin/app/src/main/res/values/strings.xml
+++ b/pyeonhalin/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">편하린</string>
-    <string name="menu_image_size">40dp</string>
+    <string name="app_name">pyenhalean</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_event">EventActivity</string>
 </resources>
