--- a/pyeonhalin/app/src/main/res/values/strings.xml
+++ b/pyeonhalin/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">pyenhalean</string>
+    <string name="app_name">편하린</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
