--- a/pyeonhalin/app/src/main/res/values/strings.xml
+++ b/pyeonhalin/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="client_name">8cpwkwr8kn</string>
 </resources>
