--- a/pyeonhalin/app/src/main/res/values/strings.xml
+++ b/pyeonhalin/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="client_name">8cpwkwr8kn</string>
+    <string name="title_activity_owner_manage_item">OwnerManageItemActivity</string>
 </resources>
